--- a/ci-template/src/css/style.css
+++ b/ci-template/src/css/style.css
@@ -1,3 +1,9 @@
 body {
   color: #999;
 }
+
+.welcome {
+  color: rgb(61, 192, 146);
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
